logs/2023-12-03-23-18-24/serverbuild.log
main.c: In function ‘handler_msg’:
main.c:17:18: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
   17 |         int sock=(int)arg;
      |                  ^
main.c: In function ‘main’:
main.c:43:54: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
   43 |                 pthread_create(&tid,NULL,handler_msg,(void*)connf);
      |                                                      ^
ftpServer.c: In function ‘ftpserver_process’:
ftpServer.c:80:51: error: ‘UserName’ undeclared (first use in this function)
   80 |                 ftpserver_make_directory(sock_ctl,UserName);
      |                                                   ^~~~~~~~
ftpServer.c:80:51: note: each undeclared identifier is reported only once for each function it appears in
ftpServer.c:81:24: error: ‘FTP_PATH’ undeclared (first use in this function)
   81 |                 strcat(FTP_PATH,UserName);
      |                        ^~~~~~~~
ftpServer.c: In function ‘ftpserver_login’:
ftpServer.c:206:16: error: ‘UserName’ undeclared (first use in this function)
  206 |         strcpy(UserName, user);//将用户名存入全局变量用作访问控制
      |                ^~~~~~~~
ftpServer.c: In function ‘ftpserver_check_user’:
ftpServer.c:240:33: warning: passing argument 2 of ‘getline’ from incompatible pointer type [-Wincompatible-pointer-types]
  240 |         while(-1!=getline(&line,&len,fd))
      |                                 ^~~~
      |                                 |
      |                                 int *
In file included from ../common/common.h:4,
                 from ftpServer.h:4,
                 from ftpServer.c:10:
/usr/include/stdio.h:646:46: note: expected ‘size_t * restrict’ {aka ‘long unsigned int * restrict’} but argument is of type ‘int *’
  646 |                           size_t *__restrict __n,
      |                           ~~~~~~~~~~~~~~~~~~~^~~
ftpServer.c: In function ‘ftpserver_list’:
ftpServer.c:331:9: warning: implicit declaration of function ‘sendfile’ [-Wimplicit-function-declaration]
  331 |         sendfile(sock_data,fd,NULL,size);
      |         ^~~~~~~~
ftpServer.c: In function ‘ftpserver_make_directory’:
ftpServer.c:548:50: error: ‘FTP_PATH’ undeclared (first use in this function)
  548 |     snprintf(dir_path, sizeof(dir_path), "%s%s", FTP_PATH, path);
      |                                                  ^~~~~~~~
